# fin377-work

./: .gitattributes  .gitignore  LICENSE.txt  README.md  app.py  backtest.py  backtest_summary.txt  config.py  data.py  datamarshal.py  factor.py  factor_analysis.xlsx  factor_returns.xlsx  india_stocks_history.csv  pyproject.toml  rossa.py  runconfig.py  tickers.txt
_archive/: backtest_summary.txt  factor_analysis.xlsx  prof.out
_scratch/: diagnose_price_data.py  get_edgar.py  simple_check.py  test_rossa.py  test_rossa_all_tickers.py  test_rossa_nasdaq100.py  test_rossa_rolling_window.py  test_rossa_sp100.py  test_rossa_sp500_bottom_n.py
data/: india-tickers.txt  russell2000.txt  stock_price_history.csv  ticker-no-large.txt  tickers-all.txt  tickers.txt  tickers100.txt
data/sp_constituents_yearly_sep30/: 2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  2025.csv
n100tickers/: pyproject.toml
n100tickers/src/n100tickers/: n100tickers.py
outputs/: backtest_results.xlsx  backtest_summary.txt  factor_analysis.xlsx  portfolio_snapshots.csv  snapshot_exposures_market_general.csv  snapshot_exposures_with_industries.csv  snapshot_exposures_with_sectors.csv  summary_over_time.xlsx
tmp/: filter_impact.py  verification_checklist.py
