[project]
name = "rossa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "yfinance>=1.2.2",
    "matplotlib>=3.8.0",
    "networkx>=3.2",
    "openpyxl>=3.1.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "n100tickers",
]

[tool.uv.workspace]
members = [
    "n100tickers",
]

[tool.uv.sources]
n100tickers = { workspace = true, editable = true }
